Fix container spacing

--- a/static/css/quiz-page/container.css
+++ b/static/css/quiz-page/container.css
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: column;
   height: 600px;
-  width: 1000px;
+  width: 940px;
   justify-content: center;
   align-items: center;
   border-radius: 0.5em;
